--- a/public/styles/sidebar.css
+++ b/public/styles/sidebar.css
@@ -265,7 +265,7 @@
 .sidebar.active .dashboard .tooltip {
   opacity: 0;
 }
-.deleteBtn {
+.sidebarListDelete .deleteBtn {
   position: relative;
   left: 150px;
   bottom: 3px;
